Fri Feb  6 12:11:24 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (process_options): set initial default_external before -r.

Sun Feb 22 10:43:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (method_missing): should not pop cfp if missing method
	  is method_missing.  [ruby-core:22298]

	* vm_eval.c (rb_raise_method_missing): new function to directly
	  raise NoMethodError.

	* vm_insnhelper.c (vm_call_method): fixed the case method_missing
	  is missing.

Fri Feb 20 23:28:11 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* util.c (rv_alloc, freedtoa): use our normal xmalloc()/xfree() because
	  couldn't free the returned pointer from ruby_dtoa().

	* missing/vsnprintf.c (cvt): receive buffer and use/return it instead
	  of returning the pointer returned from BSD__dtoa().

	* missing/vsnprintf.c (BSD_vfprintf): pass buf to cvt() as the buffer.
	  [ruby-core:22184]

Thu Feb 19 15:39:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_ocsp.c (ossl_ocspbres_verify): OCSP_basic_verify
	  returns positive value on success, not non-zero.  [ruby-core:21762]

Wed Feb 18 12:35:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_extname): fix for spaces before extention.
	  [ruby-dev:38044]

Wed Feb 18 10:29:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (thread_start_func_2): do not delete main thread from
	  living_threads.  [ruby-core:19385], [ruby-core:22158]

Tue Feb 17 05:41:08 2009  Koichi Sasada  <ko1@atdot.net>

	* compile.c: fix to add "ensure" codes across "while" clause
	  before "return" expression.  [ruby-dev:37967]

	* bootstraptest/test_flow.rb: add a test.

Sun Feb 15 11:45:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_define_hooked_variable): suppress false assertion
	  with VC9.  [ruby-core:22115]

Fri Feb 13 15:11:11 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (eval_string_with_cref): use rb_vm_get_ruby_level_next_cfp() 